# hbc-56

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  emconfig.bat  emconfig.sh
.github/workflows/: cmake-multi-platform.yml  emulator-msbuild.yml  emulator-msbuilld.yml  emulator-wasm.yml
code/6502/: README.md  hbc56.asm  knightrider.asm  lcd.asm  lcd12864.asm  lcd12864box.asm  lcd12864ext.asm  lcd12864gallery.asm  lcd12864gfx.asm  lcd12864img.asm  lcd12864text.asm  lcd12864tilemap.asm  lcd2.asm  lcd3.asm  makefile  tms9918test.asm
code/6502/basic/: README.md  basic.asm  basic_glcd.asm  basic_hbc56_core.asm  basic_lcd.asm  basic_tms.asm  basic_uart.asm  hbc56_lcd_mon.asm  hbc56_mon.asm  makefile  output_lcd.asm  output_lcd_12864.asm  output_tms9918.asm
code/6502/basic/drivers/: input.asm  input_uart.asm  output_lcd.asm  output_lcd_12864.asm  output_tms9918.asm  output_uart.asm
code/6502/basic/ehbasic/: basic.asm
code/6502/basic/functions/: basic_functions.asm  jump_table.asm
code/6502/basic/programs/: circles.bas  circles.txt  draw.bas  (+6 more)
code/6502/breakout/: README.md  breakout.asm  makefile
code/6502/durexforth/: Makefile  durexforth.asm  durexforth.prg.lmap  durexforth.prg.rpt  imgui.ini
code/6502/gfx/: bitmap.asm  tilemap.asm  tms9918.asm
code/6502/invaders/: aliens.asm  audio.asm  bunker.asm  gamefield.asm  invaders.asm  invaders.lmap  invaders.mon  layout.pdn  makefile  mon.bat  patterns.asm  score.asm  shield.asm  tile.asm  title.asm  zeropage.asm
code/6502/kernel/: .gitignore  bootscreen.asm  hbc56boot.ind  hbc56kernel.inc  interrupts.asm  jumptable.asm  kernel.asm  kernel.inc  kernel.o.lmap  kernel_macros.asm  makefile  memtest.asm
code/6502/lcd/: lcd.asm  lcd12864b.asm
code/6502/lib/: hbc56.asm  hbc56.inc
code/6502/mandlebrot/: fixedpt.asm  fixedpt24.asm  makefile  mandelbrot.asm  mandelbrot24.asm  mandelbrot_256_192.asm  mandelbrot_32_24.asm  mandelbrot_64_192.asm  mandelbrot_64_48.asm  palette.asm
code/6502/monitor/: makefile  monitor.asm  testprogram.asm  testprogram.hex
code/6502/qbert/: audio.asm  badball.asm  blocks.asm  coily.asm  imgui.ini  jump-badball.pcm  jump-coily.pcm  jump.pcm  level.asm  makefile  platform.asm  player.asm  qbert-fall.pcm  qbert.asm  ui.asm
code/6502/ut/: memory.asm  util.asm
docs/github-pages/emulator/: Hbc56Emu.data  Hbc56Emu.js  hbc56-frontend.js  hbc56.css  index.html
emulator/: CMakeLists.txt  README.md
emulator/linux/: README.md  makefile
emulator/modules/: CMakeLists.txt
emulator/msvc/: Hbc56Emu.rc  Hbc56Emu.sln  Hbc56Emu.vcxproj  Hbc56Emu.vcxproj.filters  Resource.h
emulator/roms/: basic_lcd.o.lmap  basic_lcd.o.rpt  basic_tms.o.rpt  breakout.o.lmap  invaders.o.lmap  invaders.o.rpt  kbtest.o.lmap  kbtest.o.rpt  lcd12864gfx.o.lmap  lcd12864gfx.o.rpt  lcd12864tilemap.o.lmap  lcdtype.o.lmap  mario.o.rpt  tms9918test.o.rpt  tms9918txttest.o.lmap
emulator/src/: CMakeLists.txt  Hbc56Emu.rc  audio.c  audio.h  clock.c  clock.h  config.h  debugger.c  debugger.h  device.c  device.h  hbc56emu.c  hbc56emu.cpp  hbc56emu.h  icons.c  imgui.ini  keyboard.h  lcd.c  lcd.h  ram_device.c  ram_device.h  tms9918_device.c  tms9918_device.h  window.c  window.h
emulator/src/debugger/: debugger.c  debugger.cpp  debugger.h  font.c
emulator/src/devices/: 6502_device.c  6502_device.h  ay38910_device.c  ay38910_device.h  device.c  device.h  keyboard_device.c  keyboard_device.h  lcd_device.c  lcd_device.h  memory_device.c  memory_device.h  nes_device.c  nes_device.h  tms9918_device.c  tms9918_device.h  uart_device.c  uart_device.h  via_device.c  via_device.h
emulator/wasm/: build_wasm.bat  hbc56-frontend.js  hbc56.css  hbc56.data  hbc56.html  hbc56.js  hbc56.wasm  imgui.ini  index.html  rom.bin.lmap  rom.bin.rpt
emulator/wasm/invaders/: rom.bin.lmap
emulator/wasm/roms/: basic_glcd.o.lmap  basic_glcd.o.rpt  breakout.o.lmap  breakout.o.rpt  invaders.o.lmap  invaders.o.rpt  kbtest.o.lmap  kbtest.o.rpt  lcd12864gallery.o.lmap  lcd12864gallery.o.rpt  lcd12864gfx.o.lmap  lcd12864gfx.o.rpt  lcd12864tilemap.o.lmap  lcd12864tilemap.o.rpt  lcdtype.o.lmap  lcdtype.o.rpt  mario.o.lmap  mario.o.rpt  nestest.o.lmap  nestest.o.rpt  tms9918gfx2test.o.lmap  tms9918gfx2test.o.rpt  tms9918mctest.o.lmap  tms9918mctest.o.rpt  tms9918test.o.lmap  tms9918test.o.rpt  tms9918txttest.o.lmap  tms9918txttest.o.rpt  tms9918type.o.lmap  tms9918type.o.rpt
mcu/: .gitignore  README.md
mcu/keyboard/: .gitignore  README.md  main.asm
mcu/keyboard/nbproject/: configurations.xml  project.xml
notes/: boards.txt  mem map.txt
pulseview/: Default.pvs  Default.sr  HB56 Control Signals.pvs  HB56 Control Signals.sr
schematics/: README.md
schematics/6502/: README.md  hbc56intctrl.jed  hbc56intctrl.pld  hbc56ioctrl.jed  hbc56ioctrl.pld
schematics/ay38910/: README.md  ay38910control.jed  ay38910control.pld  tl866_ay38910_logic_test.lgc
schematics/backplane/: README.md
schematics/clock/: README.md
schematics/interrupt/: hbc56intctrl.jed  hbc56intctrl.pld
schematics/keyboard_nes/: README.md  hbc56_kbdnes_addr.jed  hbc56_kbdnes_addr.pld
schematics/lcd/: README.md
schematics/proto/: README.md
schematics/ramrom/: README.md  hbc56_ramrom_io.jed  hbc56_ramrom_io.pld  hbc56_ramrom_shadow.pld  hbc56ramromshadow.jed
schematics/tms9918/: README.md
tools/: hex2mon.py  img2bitmap.py  img2mc.py  img2mode2.py  img2strip.py  img2tileshex.py  pattsquash.py  raw2pcm.py
tools/acme/: MinGW-win32_gcc6.3.0.txt
tools/tms9918_sprite_painter/: index.html  main.css  spritepainter.css  spritepainter.js
(+116 files in other folders)
